--- a/src/java/azkaban/webapp/servlet/velocity/schedulepanel.vm
+++ b/src/java/azkaban/webapp/servlet/velocity/schedulepanel.vm
@@ -65,6 +65,29 @@
                     </select>
                   </div>
 								</div>
+								<div class="form-group">
+                  <label class="col-sm-2">Retries</label>
+                  <div class="col-sm-3">
+                    <div class="checkbox">
+                      <input id="retries_check" type="checkbox" checked="checked">
+                      <label>check and retry</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <input id="schedule_retries" type="text" size="2" value="5" class="form-control">
+                  </div>
+                  <div class="col-sm-3">
+                    <div class="checkbox">
+                      <label>times</label>
+                    </div>
+                  </div>
+                  <div class="col-detail">
+                      <button type="button" class="btn btn-small btn-default" id="retries_details_button">Details ?</button>
+                  </div>
+								</div>
+                                                                <div class="form-group" id="retries_detail" style="display: none">
+                      <div class="help">This option is to suspend the schedule when something is wrong to avoid receiving massive failure emails. If this option is adopted, Azkaban will check how many times the schedule has tried before the workflow runs, and suspends it when the times of successive failed attempts exceed the set threshold.</div>
+                                                                </div>
 							</fieldset>
 						</div>
 						<div class="modal-footer">
