--- a/src/java/azkaban/webapp/servlet/velocity/projectmodals.vm
+++ b/src/java/azkaban/webapp/servlet/velocity/projectmodals.vm
@@ -47,7 +47,7 @@
 			</div>
 
 	## Delete project modal.
-			
+
 			<div class="modal" id="delete-project-modal">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -64,6 +64,92 @@
 								<input type="hidden" name="delete" value="true">
 								<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 								<button type="button" class="btn btn-danger" id="delete-btn">Delete Project</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+	## Create workflow modal.
+
+			<div class="modal" id="create-workflow-modal">
+				<div class="modal-dialog-workflow">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title">Edit Workflow</h4>
+						</div>
+						<div class="modal-body" id="modal-body-tmp">
+								<button type="button" class="btn btn-small btn-default" id="workflow_Operations_details_button" float="right">Operations ?</button>
+								<div class="form-group" id="Operations_detail" style="display: none">
+									<ul>
+										<li><strong>Translate/Zoom:</strong> drag/scroll</li>
+										<li><strong>Create a job:</strong> shift-click on graph</li>
+										<li><strong>Create a directed edge:</strong> shift-click on a job and then drag to another job</li>
+										<li><strong>Set job description:</strong> shift-click on a job</li>
+										<li><strong>Detele a job or edge:</strong> click it and press backspace/delete</li>
+									</ul>
+								</div>
+							<div class="modal modal-wide" id="node-edit-pane">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal" aria-hidden="true" id="job-close-btn">&times;</button>
+											<h4 class="modal-title">Edit Job</h4>
+										</div>
+										<div class="modal-body">
+											<h4>Job Essentials</h4>
+											<table class="table table-bordered table-condensed">
+											<tbody>
+												<tr>
+													<td class="property-key">Job Name</td>
+													<td id="jobName" class="editable">
+														<span class="spanValue"></span>
+													</td>
+												</tr>
+												<tr>
+													<td class="property-key">Job Type</td>
+													<td id="jobType" class="editable">
+														<span class="spanValue"></span>
+													</td>
+												</tr>
+											</tbody>
+											</table>
+											<h4>General Job Settings</h4>
+											<table id="generalProps" class="table table-striped table-bordered">
+											<thead>
+												<tr>
+													<th class="property-key">Name</th>
+													<th>Value</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr id="addRow">
+												<td id="addRow-col" colspan="2">
+													<button type="button" class="btn btn-xs btn-success" id="add-btn">Add Row</button>
+												</td>
+												</tr>
+											</tbody>
+											</table>
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-default" id="job-cancel-btn" data-dismiss="modal">Cancel</button>
+												<button type="button" class="btn btn-primary" id="set-btn" data-dismiss="modal">Set/Change Job Description</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<form id="delete-form">
+								<input type="hidden" name="project" value="$project.name">
+								<input type="hidden" name="action" value="upload">
+								<input type="file" id="hidden-file-upload">
+								<button type="button" style="display:none" class="btn btn-info" id="remote-workflow-edit-btn">Edit Workflow</button>
+								<button type="button" style="display:none" class="btn btn-info" id="local-workflow-edit-btn">Edit Local Workflow</button>
+								<button type="button" class="btn btn-default" id="workflow-clear-btn">Clear</button>
+								<button type="button" class="btn btn-info" id="workflow-download-btn">Download Workflow</button>
+								<button type="button" class="btn btn-primary" id="workflow-upload-btn" data-dismiss="modal">Save Workflow</button>
 							</form>
 						</div>
 					</div>
